Style corrections / Footer add

--- a/html/angular-views/article-content.html
+++ b/html/angular-views/article-content.html
@@ -1,7 +1,9 @@
-<h1 ng-if="article === undefined"><a ng-href="./{{item.category_alias}}/{{item.slug}}">{{item.title}}</a></h1>
+<h1 ng-if="article === undefined"><a ng-href="index.php?option=com_content&view=article&id={{item.id}}">{{item.title}}</a></h1>
 
-<div ng-if="article === undefined" ng-bind-html="item.introtext"></div>
-<a href="" ng-click="item.full = !item.full" ng-if="article === undefined && item.fulltext!=''">{{!item.full?'Lire la suite...':'Réduire'}}</a>
-<div ng-bind-html="item.fulltext" ng-if="item.full && article === undefined"></div>
+<div class="inner">
+   <div ng-if="article === undefined" ng-bind-html="item.introtext"></div>
+   <p><a class="readmore" href="" ng-click="item.full = !item.full" ng-if="article === undefined && item.fulltext!=''">{{!item.full?'Lire la suite...':'Réduire'}}</a></p>
+   <div ng-bind-html="item.fulltext" ng-if="item.full && article === undefined"></div>
 
-<div ng-if="article !== undefined" ng-bind-html="item.introtext+item.fulltext"></div>
+   <div ng-if="article !== undefined" ng-bind-html="item.introtext+item.fulltext"></div>
+</div>
