--- a/html/angular-views/search.html
+++ b/html/angular-views/search.html
@@ -2,7 +2,7 @@
 <section>
    <article>
       <h1>« {{searchForm.origKeyword}} » <i class="fa fa-arrow-right"></i> {{searchForm.total}} resultat{{(searchForm.total>1)?'s':''}}</h1>
-      <div>
+      <div class="inner">
          <ul class="results">
             <li ng-if="searchForm.results.length == 0">
                <h4>Aucun résultat pour cette requête.</h4>
