--- a/html/angular-views/article-content.html
+++ b/html/angular-views/article-content.html
@@ -1,9 +1,11 @@
 <h1 ng-if="article === undefined"><a ng-href="index.php?option=com_content&view=article&id={{item.id}}">{{item.title}}</a></h1>
 
-<div class="inner">
+<div class="inner" img-row>
    <div ng-if="article === undefined" ng-bind-html="item.introtext"></div>
-   <p><a class="readmore" href="" ng-click="item.full = !item.full" ng-if="article === undefined && item.fulltext!=''">{{!item.full?'Lire la suite...':'Réduire'}}</a></p>
-   <div ng-bind-html="item.fulltext" ng-if="item.full && article === undefined"></div>
+   <p><a class="readmore" href="" ng-click="item.full = !item.full" ng-show="article === undefined && item.fulltext!=''">{{!item.full?'Lire la suite...':'Réduire'}}</a></p>
+   <div ng-bind-html="item.fulltext" ng-show="item.full && article === undefined"></div>
 
    <div ng-if="article !== undefined" ng-bind-html="item.introtext+item.fulltext"></div>
+
+   <div class="tags" ng-include="tmplPath+'/html/angular-views/article-tags.html'" ng-if="item.tags.itemTags.length>0"></div>
 </div>
